--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -11,6 +11,9 @@
   
   <%= f.label :content, 'タスク' %>
   <%= f.text_field :content %>
+
+  <%= f.label :content, 'ステータス' %>
+  <%= f.text_field :status %>
   
   <%= f.submit '登録' %>
 <% end %>
