--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,5 +5,6 @@
   <li><%= link_to task.id, task %> : <%= task.content %> &gt; <%= task.status %></li>
   <% end %>
 </ul>
+<%= paginate @tasks %>
 
 <%= link_to 'タスクの生成', new_task_path %>
