--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,6 +9,7 @@
     <!-- メニュー項目：justyfy-content-endで右端に寄せる -->
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
+        <li class="nav-item"><%= link_to 'Signup', signup_path, class: 'nav-link' %></li>
         <li class="nav-item"><%= link_to '新規タスクの登録', new_task_path, class: 'nav-link' %></li>
       </ul>
     </div>
